re PR middle-end/50700 (__builtin_object_size computed wrong)

2011-10-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50700
	* tree-object-size.c (addr_object_size): Simplify and treat
	MEM_REF bases consistently.

	* gcc.dg/builtin-object-size-12.c: New testcase.

From-SVN: r179850